--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,9 @@
 apply plugin: 'java'
+
+repositories {
+  mavenCentral()
+}
+
+dependencies {
+  compile 'org.springframework.data:spring-data-mongodb:1.2.3.RELEASE'
+}
