WS test example

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ repositories {
 
 dependencies {
   runtime 'org.springframework:spring-core:3.2.3.RELEASE'
-  runtime 'org.springframework.data:spring-data-commons:1.7.1.RELEASE'
+  //runtime 'org.springframework.data:spring-data-commons:1.7.1.RELEASE'
   
   //compile 'org.slf4j:slf4j-api:1.7.5'
   //runtime 'org.slf4j:slf4j-jdk14:1.7.5'
@@ -36,4 +36,8 @@ dependencies {
   testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
 
   compile 'org.springframework.boot:spring-boot-starter-web'
+}
+
+test {
+  exclude 'com/showmetheroute/service/**'
 }
